--- a/assets/src/sass/_main.scss
+++ b/assets/src/sass/_main.scss
@@ -5,6 +5,7 @@
 
 .Main {
     height: 100vh;
+    margin: 0 100px 0 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,33 +24,56 @@
     }
 
     &__title {
-        font-size: $font-size_xl;
+        margin: 25px 0 25px 0;
+        font-size: $font-size_xl * 2;
+        animation-name: wiggle;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
     }
+
+    @keyframes wiggle {
+        0% {transform: rotate(0deg);}
+        25% {transform: rotate(10deg);}
+        50% {transform: rotate(0deg);}
+        75% {transform: rotate(-10deg);}
+        100% {transform: rotate(0deg);}
+    }
+}
+
+@mixin Box($color) {
+    border: 2px solid $color;
 }
 
 .Container {
     padding: 50px;
-    border: 1px solid lightgrey;
+    @include Box($dark);
     border-radius: 25px;
 
     &__text {
-        min-width: 600px;
         text-align: center;
-        font-size: $font-size_md;
+        font-size: $font-size_lg;
     }
 }
 
 .Button {
     width: 150px;
     padding: 25px;
-    border: 1px solid black;
+    @include Box($red);
     border-radius: 25px;
     background: none;
+    color: $red;
+    transition: .1s ease-in-out;
 
     &__text {
         text-align: center;
         font-size: $font-size_sm;
         font-weight: bolder;
         text-transform: uppercase;
+    }
+
+    &:hover {
+        background-color: $red;
+        color: $light;
+        transform: scale(1.2);
     }
 }
