Add "swipe to remove function" (doesn't really work yet)

--- a/assets/src/sass/_variables.scss
+++ b/assets/src/sass/_variables.scss
@@ -9,3 +9,4 @@ $font-size_xl: $font-size * 1.5;
 $dark: black !default;
 $light: white !default;
 $red: rgb(255, 114, 114) !default;
+$green: rgb(114, 255, 156) !default;
